--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -89,8 +89,13 @@ From {{inh|en|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, the past pa
 #* {{quote-book|en|year=2011|author=Jodi Picoult|title=Sing You Home|page=273|passage=Angela smiles. ‘I'm '''straight''', Zoe, and I'm happily married.’}}
 #* {{quote-book|en|author=Wheeler Winston Dixon|authorlink=Wheeler Winston Dixon|title=Straight: Constructions of Heterosexuality in the Cinema|location=Albany, N.Y.|publisher={{w|State University of New York Press}}|year=2012|page=1|isbn=978-0-7914-8733-4|passage=Every other mode of social discourse is "other," whether it be termed ''gay'' (or the newly acceptable ''queer''), ''bisexual'', or ''asexual'', or embodied in the concept of the ''spinster'', the ''confirmed bachelor'', the ''old maid'', or the ''same-sex couple'' who will never fit into the "'''straight'''" world, and doesn't or don't want to. The state of nonstraightness is essentially suspect; it is not seen as "right [or] correct."}}
 #* {{quote-book|en|author=Katie Price|authorlink=Katie Price|title=He's the One| location=London| publisher=[[w:Random House|Century]]| year=2013| page=233| isbn=978-1-84605-959-9| passage=Why did he have to be '''straight'''? It's my tragedy. When we went camping with the school, we shared a tent. I was hoping for a ''{{w|Brokeback Mountain}}'' moment. I mean, I know he's '''straight''', but there's always hope.}}
-# {{lb|en|colloquial|of a romantic or sexual relation}} Occurring between people of opposite sex.
+# {{lb|en|colloquial|of a romantic or sexual relation}} Occurring between people of opposite sex (sometimes, but only sometimes, specifically between heterosexual ones).
 #: '''''straight''' marriage, sex, relationships''
+#* '''2013''', Shiri Eisner, ''Bi: Notes for a Bisexual Revolution'', Seal Press ({{ISBN|9781580054744}}), page 100:
+#*: However, a "man/woman relationship" with a bisexual person in it, is not a "'''straight'''" relationship{{...}}
+#* '''2015''', Cara Bergstrom-Lynch, ''Lesbians, Gays, and Bisexuals Becoming Parents or Remaining Childfree: Confronting Social Inequalities'', Lexington Books ({{ISBN|9781498521970}}), page 6:
+#*: What was possible family-wise was fairly limited, though many gays, lesbians, and bisexuals had children in '''straight''' relationships and then came out.
+#* {{seemoreCites|en}}
 # {{lb|en|colloquial}} Not using [[alcohol]], [[drug]]s, ''etc.'' {{defdate|from 20<sup>th</sup>c.}}
 #: {{syn|en|straightedge}}
 #* '''1989''', {{w|Gus Van Sant}}, ''{{w|Drugstore Cowboy}}'':
