--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -95,7 +95,7 @@ Or from {{der|zh|aav}}, cognate with {{och-l|亮|bright}} ({{zh-ref|Schuessler, 
 # {{zh-div|朝}} {{w|Ming dynasty}}
 # {{surname|zh|dot=,}} listed as #111 on the ''[[:w:Baijiaxing|Baijiaxing]]''
 # {{zh-div|母}} {{lb|zh|Chinese linguistics}} the [[Middle Chinese]] [[initial]] of {{ltc-l|明}}
-# {{rfd-sense|zh}} {{name obor|zh|ja|xlit=Akira|type=male given name}}
+# {{rfd-sense|zh}} {{name obor|zh|ja|明|xlit=Akira|type=male given name}}
 
 ====See also====
 {{zh-Chinese dynasties}}
