--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -30,6 +30,8 @@ From {{der|en|frm|-}} {{m|fr|blonde|g=f}}. See {{m|en|blond}}.
 {{en-adj|er|more}}
 
 # {{lb|en|especially|of a|woman}} {{alternative form of|en|blond}}
+#* '''1895''', S. R. Crockett, ''A Cry Across the Black Water''
+#*: So the great wasteful summer days went by, the glory of the passionate nights of July, the crisper '''blonde''' luxuriance of August.
 # {{lb|en|especially|of a|woman|offensive}} [[stupid|Stupid]], [[ignorant]], [[naive]].
 #* '''2005''', Nancy Bartholomew, ''Lethally Blonde'', Silhouette {{ISBN|9781552543771}}, page 8:
 #*: Emma&#39;s already huge green eyes widen and she gives me this look like, “Oh my God, sometimes you are just so '''blonde'''!”
