--- a/en/愣/愣.15670.wikitext
+++ b/en/愣/愣.15670.wikitext
@@ -2,7 +2,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=09|sn=12|four=96027|canj=PWLS|ids=⿰忄⿱罒方}}
+{{Han char|rn=61|rad=心|as=09|sn=12|four=96027|canj=PWLS|ids=⿰忄𬙙,⿰忄⿱罒方}}
 
 ====References====
 * {{Han ref|kx=0396.071|dkj=10980|hdz=42328.120|uh=6123|ud=24867|bh=B468|bd=46184}}
