--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -81,6 +81,7 @@ From {{inh|en|enm|floten}}, from {{inh|en|ang|flotian|t=to float}}, from {{der|e
 *: Mandarin: {{t+|cmn|浮|tr=fú}}
 * Czech: {{t+|cs|plavat}}, {{t+|cs|plout}}
 * Dutch: {{t+|nl|drijven}}
+* Esperanto: {{t|eo|flosi}}
 * Finnish: {{t+|fi|kellua}}
 * French: {{t+|fr|flotter}}
 * Galician: {{t|gl|flotar}}
