--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -271,7 +271,7 @@ From {{inh|en|enm|skyrte}}, from {{der|en|non|skyrta}}, from {{der|en|gem-pro|*s
 * Hungarian: {{t+|hu|csaj}}, {{t+|hu|spiné}}
 {{trans-mid}}
 * Ottoman Turkish: {{t|ota|اكسك اتك|tr=eksik etek|lit=short skirt}}
-* Polish: {{t+|pl|kiecka|f}}
+* Polish: {{t+|pl|kiecka|f}}, {{t+|pl|spódnica|f}}
 * Portuguese: {{t+|pt|rabo-de-saia|m}}
 * Russian: {{t+|ru|ю́бка|f}}
 * Serbo-Croatian:
