--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -53,6 +53,7 @@ From {{com|en|united|kingdom}}, first attested from 1706.
 * Dzongkha: {{t|dz|ཡུ་ནའི་ཊེཊ་ཀིང་ཌམ}}
 * Esperanto: {{t|eo|Unuiĝinta Regno}}, {{t|eo|Unuiĝinta Reĝlando}}
 * Estonian: {{t+|et|Ühendkuningriik}} {{qualifier|only in diplomacy}}, {{t|et|Suurbritannia ja Põhja-Iiri Ühendkuningriik}}
+* Farefare: {{t|gur|Ɩŋɔ}}
 * Faroese: {{t|fo|Hitt Sameinda Kongsríki|n}}
 * Finnish: {{t+|fi|Yhdistynyt kuningaskunta}}
 * French: {{t+|fr|Royaume-Uni|m}}, {{t+|fr|Royaume-Uni de Grande-Bretagne et d'Irlande du Nord|m}}
