--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -422,8 +422,8 @@ From {{bor|id|nl|Israël}}, from {{der|id|dum|israel}}, from {{der|id|odt|israel
 # {{l|en|Israel}}:
 ## {{senseid|en|Q801}}The [[State of Israel]], a modern country in the [[Middle East]], at the eastern [[shore]] of the [[Mediterranean]].
 ## The {{w|Land of Israel}}, a [[region]] that is roughly [[coextensive]] with the {{w|State of Israel}}.
-## {{lb|en|historical}} An ancient [[kingdom]] that occupied roughly the same area in ancient times.
-## {{lb|en|historical}} An ancient [[kingdom]] that occupied the northern part of this area, as distinct from [[Judah]].
+## {{lb|id|historical}} An ancient [[kingdom]] that occupied roughly the same area in ancient times.
+## {{lb|id|historical}} An ancient [[kingdom]] that occupied the northern part of this area, as distinct from [[Judah]].
 ## The [[Jew]]s, taken collectively.
 ##: {{syn|id|Yahudi}}
 
