--- a/en/昫/昫.16979.wikitext
+++ b/en/昫/昫.16979.wikitext
@@ -11,12 +11,27 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[heoi2]]|y=heui2}}
+===Glyph origin===
+{{Han etym}}
 
-# {{rfdef|yue|sort=日05}}
+===Pronunciation===
+{{zh-pron
+|m=xù
+|c=heoi2
+|mn=
+|mn-t=
+|mc=y
+|oc=y
+|cat=a
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{zh-alt-lb|煦}} [[warm]]
 
 ----
 
@@ -41,15 +56,6 @@
 {{ko-hanja|구}}
 
 # {{rfdef|ko|sort=日05}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[xù]] ([[xu4]])|wg=hsü<sup>4</sup>}}
-
-# {{rfdef|cmn|sort=日05}}
 
 ----
 
