--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -88,6 +88,7 @@ From {{inh|en|enm|France}}, from {{der|en|fro|France}}, from {{der|en|la|Francia
 * Acehnese: {{t|ace|Peurancih}}
 * Adyghe: {{t|ady|Францие}}
 * Afrikaans: {{t+|af|Frankryk}}
+* Akan: {{t|ak|Frɛnkye}}
 * Albanian: {{t+|sq|Franca|f}}, {{t|sq|Galia|f}}, {{t|sq|Francë|f}} {{qualifier|indefinite}}
 * American Sign Language: {{t|ase|F@NearForehead-HandPalmDown F@NearForehead-HandPalmUp HorizSmallTwist}}
 * Amharic: {{t|am|ፈረንሣይ}}
