--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -238,6 +238,7 @@ Adjective sense of "drunk" (now rare and now usually used in the originally jocu
 * Lithuanian: {{t|lt|kirpti}}
 * Lombard: {{t|lmo|taià}}
 * Macedonian: {{t|mk|сече|impf}}, {{t|mk|реже|impf}}
+* Manchu: {{t|mnc|ᡤᡳᡵᡳᠮᠪᡳ}}
 * Miyako: {{t|mvi|切|tr=きぃー, ksïï}}
 {{trans-mid}}
 * Nahuatl: {{t|nci|tequi}}, {{t|nci|cotōna}}
