--- a/en/慖/慖.15722.wikitext
+++ b/en/慖/慖.15722.wikitext
@@ -28,7 +28,7 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|zh}}
+# {{upset; hatred|found this definition at https://www.zdic.net/hant/%E6%85%96}}
 
 ====References====
 * (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
