--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -439,6 +439,7 @@ The verb is from {{inh|en|enm|braunchen}}, from the noun.
 * Middle English: {{t|enm|braunchen}}
 * Polish: {{t|pl|rozgałęziać się}}
 * Portuguese: {{t+|pt|brotar}}
+* Romanian: {{t+|ro|[[se]] [[ramifica]]}}
 * Slovak: {{t|sk|vetviť sa}}, {{t|sk|rozvetviť sa}}
 * Spanish: {{t+|es|ramificar}}
 * Tagalog: {{t+|tl|magbunga}}
@@ -450,6 +451,7 @@ The verb is from {{inh|en|enm|braunchen}}, from the noun.
 * Galician: {{t+|gl|gallar}}, {{t+|gl|esgallar}}
 {{trans-mid}}
 * Middle English: {{t|enm|braunchen}}
+* Romanian: {{t+|ro|([[se]]) [[ramifica]]}}
 * Slovak: {{t|sk|vetviť sa}}, {{t|sk|deliť sa}}
 * Spanish: {{t+|es|ramificar}}
 {{trans-bottom}}
