--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -296,6 +296,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 * Malay: {{tt+|ms|jambatan}}, {{tt+|ms|titi}}, {{tt|ms|titian}}, {{tt|ms|jambat}}
 * Malayalam: {{tt+|ml|പാലം}}
 * Maltese: {{tt|mt|pont|m}}
+* Manchu: {{t|mnc|ᡩᠣᠣᡥᠠᠨ}}
 * Manx: {{tt|gv|droghad|m}}
 * Maori: {{tt|mi|piriti}}, {{tt|mi|arawhata}}, {{tt|mi|arawhiti}}
 * Maranao: {{t|mrw|titay}}
