--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -61,6 +61,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 * Latin: {{t+|la|flāvus|m}}
 * Latvian: {{t|lv|blonds}}
 * Macedonian: {{t|mk|рус|f}}, {{t|mk|плав|f}}
+* Maori: {{t|mi|kōrito}}, {{t|mi|urukehu}}, {{t|mi|mākekehu}}
 * Mongolian: {{t+|mn|шар}}
 * Norman: {{t|nrf|bliond}}
 * Plautdietsch: {{t|pdt|blond}}
