--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -60,6 +60,7 @@ From {{inh|en|enm|cenyth}}, from {{der|en|ML.|cenit}}, from {{der|en|ar|سَمْ
 *: Mandarin: {{t+|cmn|天頂}}, {{t+|cmn|天顶|tr=tiāndǐng}}
 * Czech: {{t+|cs|nadhlavník|m}}, {{t+|cs|zenit|m}}
 * Danish: {{t+|da|zenit|n}}
+* Esperanto: {{t|eo|zenito}}
 * Estonian: {{t+|et|seniit}}
 * Finnish: {{t+|fi|zeniitti}}
 * French: {{t+|fr|zénith|m}}
