--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -101,7 +101,7 @@ From {{inh|en|enm|felt}}, from {{inh|en|ang|felt}}, from {{inh|en|gmw-pro|*felt}
 * Spanish: {{t+|es|fieltro|m}}
 * Swedish: {{t+|sv|filt|c}}
 * Tagalog: {{t|tl|pyeltro}}, {{t|tl|piyeltro}}
-* Thai: {{t-needed|th}}
+* Thai: {{t+|th|สักหลาด}}
 * Tibetan: {{t|bo|ཕྱིང་པ}}
 * Turkish: {{t+|tr|aba}}, {{t+|tr|keçe}}, {{t+|tr|kiyiz}} {{qualifier|dialect}}
 * Tuvan: {{t|tyv|кидис}}
