--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -217,6 +217,7 @@ From {{inh|en|enm|souken}}, {{m|enm|suken|}}, from {{inh|en|ang|sūcan|t=to suck
 * Sundanese: {{t|su|seuseup}}
 * Swedish: {{t+|sv|suga}}
 * Tajik: {{t+|tg|макидан|sc=Cyrl}}
+* Tausug: {{t|tsg|supsup}}
 * Telugu: {{t+|te|చీకు|sc=Telu}}
 * Thai: {{t+|th|ดูด}}
 * Tibetan: {{t|bo|འཇིབས}}
