--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -208,7 +208,7 @@ Cognate with {{cog|fy|sprekke}}, {{cog|nds|spreken|t=to speak}}, {{cog|nl|spreke
 * Kumyk: {{t|kum|сёйлемек}}, {{t|kum|лакъыр этмек}}
 * Kurdish:
 *: Northern Kurdish: {{t+|kmr|axaftin}}
-* Kyrgyz: {{t|ky|сүйлө-}}
+* Kyrgyz: {{t+|ky|сүйлөө}}
 * Ladin: {{t|lld|rujné}}
 * Ladino: {{t|lad|avlar}}, {{t|lad|favlar}}
 * Lao: {{t|lo|ເວົ້າ}}, {{t|lo|ພູດ}}, {{t+|lo|ກ່າວ}}, {{t+|lo|ຄຸຍ|tr=khuy}}
