--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -573,7 +573,7 @@ See combined section below.
 * Spanish: {{t+check|es|atrapar}}
 {{trans-bottom}}
 
-===Derived terms===
+====Derived terms====
 {{der4|en|title=Terms derived from the noun and verb '''catch'''
 |catchable|catchall|catchbasin|catcher|catch one's breath|catch-breath|catch cold|catch a cold|catch a crab|catch a tan|catch as catch can|catch fire|catch it|catch on|catch out|catch over|catch up|caught in the act|uncatch
 |bycatch
