--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -118,7 +118,7 @@ From {{inh|en|enm|counten}}, borrowed from {{der|en|xno|conter}}, from {{der|en|
 * Mansaka: {{t|msk|bilang}}, {{t|msk|isip}}
 * Maore Comorian: {{t|swb|hisaɓu|alt=uhisaɓu}}
 * Maori: {{t|mi|tatau}}
-* Maranao: {{t|mrw|bilang}}
+* Maranao: {{t|mrw|bilang}}, {{t|mrw|itong}}
 * Middle English: {{t|enm|counten}}
 * Mongolian: {{t+|mn|тоолох}}
 * Navajo: {{t|nv|ííníshtaʼ}}
@@ -156,6 +156,7 @@ From {{inh|en|enm|counten}}, borrowed from {{der|en|xno|conter}}, from {{der|en|
 * Swedish: {{t+|sv|räkna}}
 * Tajik: {{t+|tg|шумурдан}}
 * Tatar: {{t+|tt|санарга}}
+* Tausug: {{t|tsg|itung}}
 * Telugu: {{t+|te|లెక్కించు}}
 * Tetum: {{t|tet|sura}}
 * Thai: {{t+|th|นับ}}
