--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -4,7 +4,7 @@
 {{root|en|ine-pro|*keh₂p-}}
 From {{inh|en|enm|cacchen}}, from {{der|en|xno|cachier}}, from {{der|en|LL.|captiāre}}, present active infinitive of {{m|la|captiō}}, from {{der|en|la|captō}}, frequentative of {{m|la|capiō}}. Akin to Modern {{cog|fr|chasser}} (from {{cog|fro|chacier}}) and {{cog|es|cazar}}, and thus a {{doublet|en|chase|nocap=1}}. Displaced {{cog|enm|fangen}} {{gloss|"to catch"; > Modern English {{l|en|fang|pos=verb}}}}, from {{cog|ang|fōn||to seize, take}}; {{cog|enm|lacchen}} {{gloss|"to catch"; > Modern English {{l|en|latch}}}}, from {{cog|ang|læċċan}}.
 
-The verb became irregular, possibly under the influence of the semantically similar {{m|en|latch}} (from {{cog|ang|læċċan}}) whose past tense was {{m|enm|lahte}}, {{m|enm|lauhte}}, {{m|en|laught}} ({{cog|ang|læhte}}) until becoming regularised in Modern English.
+The verb became irregular, possibly under the influence of the semantically similar {{m|en|latch}} (from {{noncog|ang|læċċan}}) whose past tense was {{m|enm|lahte}}, {{m|enm|lauhte}}, {{m|en|laught}} ({{noncog|ang|læhte}}) until becoming regularised in Modern English.
 
 ===Pronunciation===
 * {{enPR|kăch}}, {{IPA|en|/kæt͡ʃ/}}
