--- a/en/昧/昧.16975.wikitext
+++ b/en/昧/昧.16975.wikitext
@@ -54,6 +54,10 @@
 ====Compounds====
 {{zh-der|一行三昧|兼弱攻昧|個中三昧|愚昧|念佛三昧|得其三昧|幽昧|三昧真火|愚昧無知|不揣冒昧|夷昧|三昧|冒昧從事|一昧|冒昧|檮昧|沖昧|暗昧|濛昧不清|曖昧|昧死以聞|昧沒|昧下|昧己瞞心|昧理|昧地謾天|昧信|昧旦|朦昧執迷|昧行|昧谷|昧良心|拾金不昧|瞞昧|瞞心昧己|昧爽|昧死|瞞天昧地|昧旦晨興|昏昧|禍來神昧|晻昧|濛昧|昧心|昧心取利|矇昧|法華三昧|晦昧|昧昧|昧心錢|昧地瞞天|蒙昧|謾天昧地|茫昧|貪昧|遊戲三昧|素昧生平|若昧平生|般舟三昧|至誠無昧|素昧平生|聳昧|草昧|蒙昧無知|冥昧}}
 
+====Descendants====
+* {{desc|bor=1|tai-pro|*mɯːtᴰ}}
+** {{desc|th|มืด||dark}}
+
 ===Pronunciation 2===
 {{zh-pron
 |m=wěn
