--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -208,30 +208,33 @@ Alternatively, {{zh-ref|Ōta (2003)}} proposes that it is a grammaticalization o
 }}
 
 ====Compounds====
-{{der3|ja|{{ja-r|土%地|と%ち}}: [[ground]], [[land]]
-|{{ja-r|意%地%悪|い%じ%わる}}
-|{{ja-r|地%球|ち%きゅう}}
-|{{ja-r|地%底|ち%てい}}
-|{{ja-r|地%理|ち%り}}
-|{{ja-r|地%盤|ち%ばん}}
-|{{ja-r|地%位|ち%い}}
-|{{ja-r|地%域|ち%いき}}
-|{{ja-r|地%下|ち%か}}
-|{{ja-r|地%学|ち%がく}}
-|{{ja-r|地%球|ち%きゅう}}
-|{{ja-r|地%区|ち%く}}
-|{{ja-r|地%形|ち%けい}}
-|{{ja-r|地%上|ち%じょう}}
-|{{ja-r|地%租|ち%そ}}
-|{{ja-r|地%点|ち%てん}}
-|{{ja-r|地%主|じ%ぬし}}
-|{{ja-r|地%表|ち%ひょう}}
-|{{ja-r|地%方|ち%ほう}}
-|{{ja-r|地%震|じ%しん}}
-|{{ja-r|天%地|てん%ち}}: heaven and earth
-|{{ja-r|天%変 地%異|てん%ぺん ち%い}}: [[turmoil]] throughout heaven and earth
-|{{ja-r|現%在%地|げん%ざい%ち}}: current location, you are here
+{{der-top3}}
+{{ja-r/multi|data=
+* {{ja-r/args|土%地|と%ち}}: [[ground]], [[land]]
+* {{ja-r/args|意%地%悪|い%じ%わる}}
+* {{ja-r/args|地%球|ち%きゅう}}
+* {{ja-r/args|地%底|ち%てい}}
+* {{ja-r/args|地%理|ち%り}}
+* {{ja-r/args|地%盤|ち%ばん}}
+* {{ja-r/args|地%位|ち%い}}
+* {{ja-r/args|地%域|ち%いき}}
+* {{ja-r/args|地%下|ち%か}}
+* {{ja-r/args|地%学|ち%がく}}
+* {{ja-r/args|地%球|ち%きゅう}}
+* {{ja-r/args|地%区|ち%く}}
+* {{ja-r/args|地%形|ち%けい}}
+* {{ja-r/args|地%上|ち%じょう}}
+* {{ja-r/args|地%租|ち%そ}}
+* {{ja-r/args|地%点|ち%てん}}
+* {{ja-r/args|地%主|じ%ぬし}}
+* {{ja-r/args|地%表|ち%ひょう}}
+* {{ja-r/args|地%方|ち%ほう}}
+* {{ja-r/args|地%震|じ%しん}}
+* {{ja-r/args|天%地|てん%ち}}: heaven and earth
+* {{ja-r/args|天%変 地%異|てん%ぺん ち%い}}: [[turmoil]] throughout heaven and earth
+* {{ja-r/args|現%在%地|げん%ざい%ち}}: current location, you are here
 }}
+{{der-bottom}}
 
 ===Etymology 1===
 {{ja-kanjitab|じ|yomi=o}}
@@ -314,80 +317,82 @@ From {{der|ko|ltc|sort=지|-}} {{ltc-l|地}}.
 
 ====Compounds====
 {{der-top3|Compounds}}
-* {{ko-l|지경|地境}}
-* {{ko-l|지계|地階}}
-* {{ko-l|지구|地區}}
-* {{ko-l|지구|地球}}
-* {{ko-l|지대|地帶}}
-* {{ko-l|지도|地圖}}
-* {{ko-l|지뢰|地雷}}
-* {{ko-l|지리|地理}}
-* {{ko-l|지면|地面}}
-* {{ko-l|지명|地名}}
-* {{ko-l|지반|地盤}}
-* {{ko-l|지방|地方}}
-* {{ko-l|지세|地勢}}
-* {{ko-l|지역|地域}}
-* {{ko-l|지옥|地獄}}
-* {{ko-l|지위|地位}}
-* {{ko-l|지점|地點}}
-* {{ko-l|지조|地租}}
-* {{ko-l|지주|地主}}
-* {{ko-l|지지|地支}}
-* {{ko-l|지지|地誌}}
-* {{ko-l|지진|地震}}
-* {{ko-l|지층|地層}}
-* {{ko-l|지하|地下}}
-* {{ko-l|지협|地峽}}
-* {{ko-l|지형|地形}}
-* {{ko-l|객지|客地|[[foreign]] [[land]]}}
-* {{ko-l|고지|高地}}
-* {{ko-l|궁지|窮地}}
-* {{ko-l|기지|基地}}
-* {{ko-l|단지|團地}}
-* {{ko-l|대지|大地}}
-* {{ko-l|대지|臺地}}
-* {{ko-l|묘지|墓地}}
-* {{ko-l|번지|番地}}
-* {{ko-l|부지|敷地}}
-* {{ko-l|성지|聖地}}
-* {{ko-l|양지|陽地}}
-* {{ko-l|여지|餘地}}
-* {{ko-l|영지|領地}}
-* {{ko-l|오지|奧地}}
-* {{ko-l|용지|用地}}
-* {{ko-l|육지|陸地}}
-* {{ko-l|저지|低地}}
-* {{ko-l|적지|赤地}}
-* {{ko-l|진지|陣地}}
-* {{ko-l|처지|處地}}
-* {{ko-l|천지|天地}}
-* {{ko-l|초지|草地}}
-* {{ko-l|토지|土地}}
-* {{ko-l|현지|現地}}
-* {{ko-l|지구인|地球人}}
-* {{ko-l|지도책|地圖冊}}
-* {{ko-l|지리학|地理學}}
-* {{ko-l|지문학|地文學}}
-* {{ko-l|지자기|地磁氣}}
-* {{ko-l|지정학|地政學}}
-* {{ko-l|^지중해|地中海}}
-* {{ko-l|지진학|地震學}}
-* {{ko-l|지질학|地質學}}
-* {{ko-l|지하도|地下道}}
-* {{ko-l|지하실|地下室}}
-* {{ko-l|지하철|地下鐵}}
-* {{ko-l|굴지성|屈地性}}
-* {{ko-l|근지점|近地點}}
-* {{ko-l|관광지|觀光地}}
-* {{ko-l|목적지|目的地}}
-* {{ko-l|목초지|牧草地}}
-* {{ko-l|발상지|發祥地}}
-* {{ko-l|식민지|植民地}}
-* {{ko-l|유적지|遺跡地}}
-* {{ko-l|조차지|租借地}}
-* {{ko-l|중심지|中心地}}
-* {{ko-l|진원지|震源地}}
+{{ko-l/multi|data=
+* {{ko-l/args|지경|地境}}
+* {{ko-l/args|지계|地階}}
+* {{ko-l/args|지구|地區}}
+* {{ko-l/args|지구|地球}}
+* {{ko-l/args|지대|地帶}}
+* {{ko-l/args|지도|地圖}}
+* {{ko-l/args|지뢰|地雷}}
+* {{ko-l/args|지리|地理}}
+* {{ko-l/args|지면|地面}}
+* {{ko-l/args|지명|地名}}
+* {{ko-l/args|지반|地盤}}
+* {{ko-l/args|지방|地方}}
+* {{ko-l/args|지세|地勢}}
+* {{ko-l/args|지역|地域}}
+* {{ko-l/args|지옥|地獄}}
+* {{ko-l/args|지위|地位}}
+* {{ko-l/args|지점|地點}}
+* {{ko-l/args|지조|地租}}
+* {{ko-l/args|지주|地主}}
+* {{ko-l/args|지지|地支}}
+* {{ko-l/args|지지|地誌}}
+* {{ko-l/args|지진|地震}}
+* {{ko-l/args|지층|地層}}
+* {{ko-l/args|지하|地下}}
+* {{ko-l/args|지협|地峽}}
+* {{ko-l/args|지형|地形}}
+* {{ko-l/args|객지|客地|[[foreign]] [[land]]}}
+* {{ko-l/args|고지|高地}}
+* {{ko-l/args|궁지|窮地}}
+* {{ko-l/args|기지|基地}}
+* {{ko-l/args|단지|團地}}
+* {{ko-l/args|대지|大地}}
+* {{ko-l/args|대지|臺地}}
+* {{ko-l/args|묘지|墓地}}
+* {{ko-l/args|번지|番地}}
+* {{ko-l/args|부지|敷地}}
+* {{ko-l/args|성지|聖地}}
+* {{ko-l/args|양지|陽地}}
+* {{ko-l/args|여지|餘地}}
+* {{ko-l/args|영지|領地}}
+* {{ko-l/args|오지|奧地}}
+* {{ko-l/args|용지|用地}}
+* {{ko-l/args|육지|陸地}}
+* {{ko-l/args|저지|低地}}
+* {{ko-l/args|적지|赤地}}
+* {{ko-l/args|진지|陣地}}
+* {{ko-l/args|처지|處地}}
+* {{ko-l/args|천지|天地}}
+* {{ko-l/args|초지|草地}}
+* {{ko-l/args|토지|土地}}
+* {{ko-l/args|현지|現地}}
+* {{ko-l/args|지구인|地球人}}
+* {{ko-l/args|지도책|地圖冊}}
+* {{ko-l/args|지리학|地理學}}
+* {{ko-l/args|지문학|地文學}}
+* {{ko-l/args|지자기|地磁氣}}
+* {{ko-l/args|지정학|地政學}}
+* {{ko-l/args|^지중해|地中海}}
+* {{ko-l/args|지진학|地震學}}
+* {{ko-l/args|지질학|地質學}}
+* {{ko-l/args|지하도|地下道}}
+* {{ko-l/args|지하실|地下室}}
+* {{ko-l/args|지하철|地下鐵}}
+* {{ko-l/args|굴지성|屈地性}}
+* {{ko-l/args|근지점|近地點}}
+* {{ko-l/args|관광지|觀光地}}
+* {{ko-l/args|목적지|目的地}}
+* {{ko-l/args|목초지|牧草地}}
+* {{ko-l/args|발상지|發祥地}}
+* {{ko-l/args|식민지|植民地}}
+* {{ko-l/args|유적지|遺跡地}}
+* {{ko-l/args|조차지|租借地}}
+* {{ko-l/args|중심지|中心地}}
+* {{ko-l/args|진원지|震源地}}
+}}
 {{der-bottom}}
 
 ===References===
