--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -112,7 +112,7 @@ Or from {{der|zh|aav}}, cognate with {{och-l|亮|bright}} ({{zh-ref|Schuessler, 
 {{zh-Chinese dynasties}}
 
 ===Compounds===
-{{zh-der|明暗|明白|明白人|明燦燦|明察|明察暗訪|明察秋毫|明達|明燈|明斷|明礬|明光|明光光|明光瓦亮|明火|明潔|明凈|明靜|明鏡|明朗|明亮|明明|明年|明槍暗箭|明搶|明確|明兒|明日|明銳|明閃閃|明升暗降|明顯|明星|明天|明槍易躲，暗箭難防|明目張膽|小聰明|伯明罕|公明|光明|光明燈|失明|大明星|呈明|半透明|嚴明|修明|圓明園|因明|喪明|判明|天明|宣明|復明|幽明|平明|催明鳥|三明治|孔明|分明|唐明皇|小明|大明曆|南明|克明|休明|孔明燈|剖明|夜明珠|五明|不明|三明|廉明|大明湖|大明|夜明|幽明錄|嚮明|哉生明|公生明|明鐙|流明|砸明火|明降|明淨|明刑|明徹|明忘八|文明戲|明玕|明如翦|明決|明詩|明曉|清明節|明臺|明心|明快|明令|明旌|文明病|明節|明範|明當|明前|明滅|明據|明講|明誓|決明子|明志|明蟾|明王|明詔|明了|明麗|明公|明言|明訓|明慎|明知|朱明|明瓦|明秀|擺明|明盛|明分|申明|啟明|明晨|稟明|明新|明夜|明發|明亮隔|無明|明板|明哲|明挖|明貺|正明師|明君|明媚|明暢|明法|神明|明瞭|明線|明治|明丟丟|明度|明樓|明理|明辨|昆明湖|朧明|注明|明兩|明鑒|明朝|明聖|清明|明遠樓|明喻|明溝|明智|晦明|旦明|明人|明神|明允|明河|昆明池|明瑟|照明|明密|明開|空明|春明|查明|明德|明經|明良|明槍|明師|明打明|明盤|朏明|明幌幌|明旦|明堂|明知道|挑明|明亮亮|昭明|明器|明膠|明道|明衣|明璫|明燭|明牌|明祀|明早|沒天明|明世|明者|發明|明通|明間|明慧|昌明|明府|明信片|明晃晃|明後|標明|明晰|明石|明命|明眼人|明牧|明順|澄明|明主|明目|明珠|敘明|明駝|明靈|照明彈|明悟|明說|明賢|明滴溜|明澈|發明家|明輪|石決明|文明|打明火|明碼|淺明|明夷|明局|明蝦|洞明|明四家|明汪汪|明豔|決明|永明體|明琅|明妃|明時|投明|明肌雪|明正|明鑑|松明|明證|明處|無明火|明文|昏明|明調|明見|明示|明眼|明眸|明水|明杖|明月光|明月|明擺著/明摆着|明恕|明德茶|明威|明太祖|明倫堂|方明|文明人|明教|指明|精明|陽明|聲明|顯明|齊明|聰明|英明|詳明|過明路|野決明|陽明山|賢明|說明書|虛明|說明文|說明|馬明王|簡明|長明燈|質明|黎明|表明|靜明園|黃明膠|證明|鮮明|鬼聰明|趕明兒|高明|開明|餘明|重明|透明|頭明|透明化|透明體|通明|驗明|闡明|聖明|薄明|黃明|遲明|趙公明|透明漆|透明度|辨明|載明|證明書|註明|言明|芵明|聰明人|明蘆|清明河|月明|明仔載:bîn-á-chài|東明|真理越辯越明|晨明|知人者智，自知者明|昆明|未明}}
+{{zh-der|hide_pron=1|明暗|明白|明白人|明燦燦|明察|明察暗訪|明察秋毫|明達|明燈|明斷|明礬|明光|明光光|明光瓦亮|明火|明潔|明凈|明靜|明鏡|明朗|明亮|明明|明年|明槍暗箭|明搶|明確|明兒|明日|明銳|明閃閃|明升暗降|明顯|明星|明天|明槍易躲，暗箭難防|明目張膽|小聰明|伯明罕|公明|光明|光明燈|失明|大明星|呈明|半透明|嚴明|修明|圓明園|因明|喪明|判明|天明|宣明|復明|幽明|平明|催明鳥|三明治|孔明|分明|唐明皇|小明|大明曆|南明|克明|休明|孔明燈|剖明|夜明珠|五明|不明|三明|廉明|大明湖|大明|夜明|幽明錄|嚮明|哉生明|公生明|明鐙|流明|砸明火|明降|明淨|明刑|明徹|明忘八|文明戲|明玕|明如翦|明決|明詩|明曉|清明節|明臺|明心|明快|明令|明旌|文明病|明節|明範|明當|明前|明滅|明據|明講|明誓|決明子|明志|明蟾|明王|明詔|明了|明麗|明公|明言|明訓|明慎|明知|朱明|明瓦|明秀|擺明|明盛|明分|申明|啟明|明晨|稟明|明新|明夜|明發|明亮隔|無明|明板|明哲|明挖|明貺|正明師|明君|明媚|明暢|明法|神明|明瞭|明線|明治|明丟丟|明度|明樓|明理|明辨|昆明湖|朧明|注明|明兩|明鑒|明朝|明聖|清明|明遠樓|明喻|明溝|明智|晦明|旦明|明人|明神|明允|明河|昆明池|明瑟|照明|明密|明開|空明|春明|查明|明德|明經|明良|明槍|明師|明打明|明盤|朏明|明幌幌|明旦|明堂|明知道|挑明|明亮亮|昭明|明器|明膠|明道|明衣|明璫|明燭|明牌|明祀|明早|沒天明|明世|明者|發明|明通|明間|明慧|昌明|明府|明信片|明晃晃|明後|標明|明晰|明石|明命|明眼人|明牧|明順|澄明|明主|明目|明珠|敘明|明駝|明靈|照明彈|明悟|明說|明賢|明滴溜|明澈|發明家|明輪|石決明|文明|打明火|明碼|淺明|明夷|明局|明蝦|洞明|明四家|明汪汪|明豔|決明|永明體|明琅|明妃|明時|投明|明肌雪|明正|明鑑|松明|明證|明處|無明火|明文|昏明|明調|明見|明示|明眼|明眸|明水|明杖|明月光|明月|明擺著/明摆着|明恕|明德茶|明威|明太祖|明倫堂|方明|文明人|明教|指明|精明|陽明|聲明|顯明|齊明|聰明|英明|詳明|過明路|野決明|陽明山|賢明|說明書|虛明|說明文|說明|馬明王|簡明|長明燈|質明|黎明|表明|靜明園|黃明膠|證明|鮮明|鬼聰明|趕明兒|高明|開明|餘明|重明|透明|頭明|透明化|透明體|通明|驗明|闡明|聖明|薄明|黃明|遲明|趙公明|透明漆|透明度|辨明|載明|證明書|註明|言明|芵明|聰明人|明蘆|清明河|月明|明仔載<!--:bîn-á-chài-->|東明|真理越辯越明|晨明|知人者智，自知者明|昆明|未明}}
 
 ===Descendants===
 {{CJKV||みょう|j2=めい|j3=^みん|^명|minh}}
@@ -138,14 +138,16 @@ Or from {{der|zh|aav}}, cognate with {{och-l|亮|bright}} ({{zh-ref|Schuessler, 
 
 ====Compounds====
 {{der-top3|Compounds}}
-* {{ja-r|明後日|あさって}}
-* {{ja-r|明日|あした}}
-* {{ja-r|明日|あす}}
-* {{ja-r|明%信|^あき%のぶ}}
-* {{ja-r|明明後日|しあさって}}
-* {{ja-r|明太|めんたい}}
-* {{ja-r|克%明|^かつ%あき}}
-* {{ja-r|松明|たいまつ}}
+{{ja-r/multi|data=
+* {{ja-r/args|明後日|あさって}}
+* {{ja-r/args|明日|あした}}
+* {{ja-r/args|明日|あす}}
+* {{ja-r/args|明%信|^あき%のぶ}}
+* {{ja-r/args|明明後日|しあさって}}
+* {{ja-r/args|明太|めんたい}}
+* {{ja-r/args|克%明|^かつ%あき}}
+* {{ja-r/args|松明|たいまつ}}
+}}
 {{der-bottom}}
 
 ===Etymology 1===
@@ -166,32 +168,34 @@ The {{m|ja|漢音|tr=kan'on|lit=[[Han]] [[sound]]}} reading, so likely a later b
 
 =====Derived terms=====
 {{der-top4}}
-* {{ja-r|明%暗|めい%あん}}
-* {{ja-r|明%快|めい%かい}}
-* {{ja-r|明%解|めい%かい}}
-* {{ja-r|明%海|めい%かい}}
-* {{ja-r|明%確|めい%かく}}
-* {{ja-r|明%鏡|めい%きょう}}
-* {{ja-r|明%君|めい%くん}}
-* {{ja-r|明%言|めい%げん}}
-* {{ja-r|明%察|めい%さつ}}
-* {{ja-r|明%示|めい%じ}}
-* {{ja-r|明%治|^めい%じ}}
-* {{ja-r|明%晰|めい%せき}}
-* {{ja-r|明%白|めい%はく}}
-* {{ja-r|明%瞭|めい%りょう}}
-* {{ja-r|解%明|かい%めい}}
-* {{ja-r|究%明|きゅう%めい}}
-* {{ja-r|克%明|こく%めい}}
-* {{ja-r|松%明|しょう%めい}}
-* {{ja-r|照%明|しょう%めい}}
-* {{ja-r|証%明|しょう%めい}}
-* {{ja-r|晨%明|しん%めい}}
-* {{ja-r|透%明|とう%めい}}
-* {{ja-r|薄%明|はく%めい}}
-* {{ja-r|発%明|はつ%めい}}
-* {{ja-r|不%明|ふ%めい}}
-* {{ja-r|文%明|ぶん%めい}}
+{{ja-r/multi|data=
+* {{ja-r/args|明%暗|めい%あん}}
+* {{ja-r/args|明%快|めい%かい}}
+* {{ja-r/args|明%解|めい%かい}}
+* {{ja-r/args|明%海|めい%かい}}
+* {{ja-r/args|明%確|めい%かく}}
+* {{ja-r/args|明%鏡|めい%きょう}}
+* {{ja-r/args|明%君|めい%くん}}
+* {{ja-r/args|明%言|めい%げん}}
+* {{ja-r/args|明%察|めい%さつ}}
+* {{ja-r/args|明%示|めい%じ}}
+* {{ja-r/args|明%治|^めい%じ}}
+* {{ja-r/args|明%晰|めい%せき}}
+* {{ja-r/args|明%白|めい%はく}}
+* {{ja-r/args|明%瞭|めい%りょう}}
+* {{ja-r/args|解%明|かい%めい}}
+* {{ja-r/args|究%明|きゅう%めい}}
+* {{ja-r/args|克%明|こく%めい}}
+* {{ja-r/args|松%明|しょう%めい}}
+* {{ja-r/args|照%明|しょう%めい}}
+* {{ja-r/args|証%明|しょう%めい}}
+* {{ja-r/args|晨%明|しん%めい}}
+* {{ja-r/args|透%明|とう%めい}}
+* {{ja-r/args|薄%明|はく%めい}}
+* {{ja-r/args|発%明|はつ%めい}}
+* {{ja-r/args|不%明|ふ%めい}}
+* {{ja-r/args|文%明|ぶん%めい}}
+}}
 {{der-bottom}}
 
 ====Noun====
@@ -223,13 +227,15 @@ The Buddhist senses are a translation of {{der|ja|sa|sort=みよう|विद्
 
 =====Derived terms=====
 {{der-top3}}
-* {{ja-r|明%鏡|みょう%きょう}}
-* {{ja-r|明%後%日|みょう%ご%にち}}
-* {{ja-r|明%星|みょう%じょう}}
-* {{ja-r|明%朝|みょう%ちょう}}
-* {{ja-r|明%日|みょう%にち}}
-* {{ja-r|明%明%後%日|みょう%みょう%ご%にち}}
-* {{ja-r|灯%明|とう%みょう}}
+{{ja-r/multi|data=
+* {{ja-r/args|明%鏡|みょう%きょう}}
+* {{ja-r/args|明%後%日|みょう%ご%にち}}
+* {{ja-r/args|明%星|みょう%じょう}}
+* {{ja-r/args|明%朝|みょう%ちょう}}
+* {{ja-r/args|明%日|みょう%にち}}
+* {{ja-r/args|明%明%後%日|みょう%みょう%ご%にち}}
+* {{ja-r/args|灯%明|とう%みょう}}
+}}
 {{der-bottom}}
 
 ====Noun====
