--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -24,6 +24,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 # To eject from any hollow place; to belch forth; to emit.
 #* {{RQ:Milton Comus|passage=Like the sons of Vulcan, '''vomit''' smoke.}}
 #* {{RQ:Charlotte Bronte Shirley|passage={{...}}a column of smoke, such as might be '''vomited''' by a park of artillery}}
+#* {{RQ:Dickens David Copperfield|passage=There was a chest of drawers with an escritoire top, for Uriah to read or write at of an evening; there was Uriah’s blue bag lying down and '''vomiting''' papers; there was a company of Uriah’s books commanded by Mr. Tidd; there was a corner cupboard: and there were the usual articles of furniture.}}
 #*'''1907''', {{w|E.M. Forster}}, ''The Longest Journey'', Part I, III [Uniform ed., p. 45-46]:
 #*: "Hullo!" said the athlete, and '''vomited''' with this greeting a cloud of tobacco-smoke. It must have been imprisoned in his mouth some time, for no pipe was visible.
 #* {{quote-journal|en|year=2012|author=John Branch|title=Snow Fall: The Avalanche at Tunnel Creek| newspaper=New York Time| url=http://www.nytimes.com/projects/2012/snow-fall/?smid=fb-nytimes&WT.z_sma=SP_SNT_20130415#/?part=tunnel-creek}}
