--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -81,6 +81,7 @@ The noun is derived from the verb.
 * Japanese: {{t|ja|這う|tr=hau|sc=Jpan}}, {{t|ja|伝う|tr=tsutau|sc=Jpan}}
 * Maori: {{t|mi|toropā}} {{qualifier|refers to plants}}
 * Portuguese: {{t+|pt|trepar}}
+* Romanian: {{t+|ro|târî}}
 * Russian: {{t+|ru|стели́ться|impf}}
 * Spanish: {{t+|es|reptar}}
 * Swedish: {{t+|sv|klänga}}
