--- a/en/停/停.11116.wikitext
+++ b/en/停/停.11116.wikitext
@@ -21,6 +21,9 @@
 {{Han etym}}
 {{Han compound|人|alt1=亻|亭|ls=psc|c1=s|c2=p}}.
 
+===Etymology===
+From {{zh-l|亭}} ({{zh-ref|Schuessler, 2007}}). See there for more.
+
 ===Pronunciation===
 {{zh-pron
 |m=tíng,er=y
