--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -7,7 +7,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}} ({{m|nl|nieuw}} calqued 
 ===Pronunciation===
 * {{a|RP}} {{enPR|nyoo͞-zē'lənd}}, {{IPA|en|/nju ˈziː.lənd/|/ˌnjuː -/}}
 * {{a|GA}} {{enPR|noo͞-zē'lənd}}, {{IPA|en|/nu ˈzi.lənd/|/ˌnu -/}}
-* {{a|AU|GNZ}} {{IPA|en|/njʉː zeəlɘnd/|/ˌnjʉː -/|/- ˈziː-/}}
+* {{a|AU|GNZ}} {{IPA|en|/njʉː ˈzɪələnd/|/ˌnjʉː -/|/- ˈziː-/|qual3=uncommon}}
 * {{audio|en|En-au-New Zealand.ogg|Audio (AU)}}
 * {{audio|en|GT New Zealand.ogg|Audio (NZ)}}
 * {{audio|en|en-us-New Zealand.ogg|Audio (US)}}
