--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -399,6 +399,7 @@ Noun from {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m
 * {{l|en|beer pull}}
 * {{l|en|pulldown}}, {{l|en|pull-down}}
 * {{l|en|pullout}}
+* {{l|en|pull request}}
 * {{l|en|ring-pull}}
 * {{l|en|rug-pull}}
 * {{l|en|slab pull}}
