--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -159,6 +159,7 @@ Possibly from {{inh|zh|sit-pro|*d(w)əj||egg; testicle}} ({{zh-ref|Baxter and Sa
 {{wikipedia|lang=ja}}
 {{ja-kanjitab|yomi=k|はる}}
 {{ja-pron|acc=a|y=k|はる}}
+{{rfap|ja}}
 
 ===Noun===
 {{ja-noun|はる}}
