--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -3,6 +3,8 @@
 {{wikivoyage}}
 
 ===Alternative forms===
+* {{alter|en|UK|U.K.||initialism}}
+
 ===Etymology===
 From {{com|en|united|kingdom}}, first attested from 1706.
 
