--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -50,7 +50,7 @@ From {{inh|en|enm|clingen}}, from {{inh|en|ang|clingan|t=to adhere}}, from {{inh
 * Chinese:
 *: Mandarin: {{t|cmn|粘住|tr=niánzhù|sc=Hani}}, {{t+|cmn|依附|tr=yīfù|sc=Hani}}
 * Dutch: {{t+|nl|klampen}}
-* Esperanto: {{t|eo|alkroĉiĝi}}, {{t|eo|alkroĉi sin}}
+* Esperanto: {{t|eo|alkroĉiĝi}}, {{t|eo|alteni}}
 * Estonian: {{t|et|liibuma}}
 * Finnish: {{t|fi|takertua}}, {{t+|fi|tarrautua}}
 * French: {{t+|fr|accrocher}}, {{t+|fr|accrocher|alt=s'accrocher}}, {{t+|fr|coller}}, {{t+|fr|coller|alt=se coller}}
