--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -582,6 +582,21 @@ Phonetically based spelling of {{m|en|plumb}}.
 
 ----
 
+==Rade==
+
+===Etymology===
+From {{der|rad|cmc-pro|*plum}}, from {{der|rad|aav}}.
+
+===Noun===
+{{head|rad|noun}}
+
+# [[land-leech]]
+
+===References===
+* {{cite book|author=James A. Tharp|last=Tharp|first=James A.|author2=Y-Bhăm Ƀuôn-yǎ|year=1980|title=A Rhade-English Dictionary with English-Rhade Finderlist|url=https://core.ac.uk/download/pdf/159464818.pdf|series=Pacific Linguistics. Series C-58|location=Canberra|publisher=Pacific Linguistics, Research School of Pacific and Asian Studies, The Australian National University|page=107|isbn=0 85883 217 8|titel=Archived copy|accessdate=22 December 2021|archiveurl=https://web.archive.org/web/20211101060933/https://core.ac.uk/download/pdf/159464818.pdf|archivedate=1 November 2021}}
+
+----
+
 ==Romansch==
 
 ===Alternative forms===
